# Huffman-Coding-Data-Compression

./: CMakeLists.txt  README.md  compressor.cpp  main.cpp
header/: Converter.h  FileHandler.h  HuffmanCode.h  HuffmanTreeBuilder.h
src/: Converter.cpp  FileHandler.cpp  HuffmanCode.cpp  HuffmanTreeBuilder.cpp
